@@ -38,7 +38,7 @@ AC_FUNC_ALLOCA
 AC_FUNC_CLOSEDIR_VOID
 AC_FUNC_MMAP
 dnl getpagesize is checked for by AC_FUNC_MMAP.
-AC_CHECK_FUNCS(btowc isascii memmove setmode strerror wctype)
+AC_CHECK_FUNCS(btowc isascii memmove setmode strerror wctype mbrtowc)
 AC_REPLACE_FUNCS(memchr stpcpy strtoul)
 jm_AC_PREREQ_XSTRTOUMAX
 
